// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Slider > Snapshots > should match snapshot for default state 1`] = `
<div
  class="relative w-full"
>
  <div
    class="bg-[var(--tiger-border,#e5e7eb)] rounded-full h-1.5"
  >
    <div
      class="bg-[var(--tiger-primary,#2563eb)] rounded-full absolute h-full"
      style="left: 0%; width: 0%;"
    />
    <div
      aria-disabled="false"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="bg-[var(--tiger-surface,#ffffff)] border-2 border-[var(--tiger-primary,#2563eb)] rounded-full absolute top-1/2 -translate-y-1/2 cursor-pointer transition-transform hover:scale-110 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[var(--tiger-primary,#2563eb)] h-4 w-4"
      role="slider"
      style="left: 0%;"
      tabindex="0"
    />
  </div>
  <!---->
</div>
`;

exports[`Slider > Snapshots > should match snapshot for disabled state 1`] = `
<div
  class="relative w-full cursor-not-allowed"
>
  <div
    class="bg-[var(--tiger-border,#e5e7eb)] rounded-full h-1.5 opacity-50 cursor-not-allowed"
  >
    <div
      class="bg-[var(--tiger-primary,#2563eb)] rounded-full absolute h-full"
      style="left: 0%; width: 0%;"
    />
    <div
      aria-disabled="true"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="bg-[var(--tiger-surface,#ffffff)] border-2 border-[var(--tiger-primary,#2563eb)] rounded-full absolute top-1/2 -translate-y-1/2 cursor-pointer transition-transform hover:scale-110 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[var(--tiger-primary,#2563eb)] h-4 w-4 opacity-50 cursor-not-allowed"
      role="slider"
      style="left: 0%;"
      tabindex="-1"
    />
  </div>
  <!---->
</div>
`;

exports[`Slider > Snapshots > should match snapshot with value 1`] = `
<div
  class="relative w-full"
>
  <div
    class="bg-[var(--tiger-border,#e5e7eb)] rounded-full h-1.5"
  >
    <div
      class="bg-[var(--tiger-primary,#2563eb)] rounded-full absolute h-full"
      style="left: 0%; width: 50%;"
    />
    <div
      aria-disabled="false"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      class="bg-[var(--tiger-surface,#ffffff)] border-2 border-[var(--tiger-primary,#2563eb)] rounded-full absolute top-1/2 -translate-y-1/2 cursor-pointer transition-transform hover:scale-110 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[var(--tiger-primary,#2563eb)] h-4 w-4"
      role="slider"
      style="left: 50%;"
      tabindex="0"
    />
  </div>
  <!---->
</div>
`;
